--- a/T9Predict2/T9Predict2.vcxproj
+++ b/T9Predict2/T9Predict2.vcxproj
@@ -20,15 +20,15 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{D7DDC1B5-0BFD-4936-85A1-089155BE4B70}</ProjectGuid>
+    <ProjectGuid>{3832B605-20B6-4412-AE74-3EA4BCCC51DA}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>smartPointer</RootNamespace>
+    <RootNamespace>T9Predict2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>SmartPointer</ProjectName>
+    <ProjectName>T9Predict2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -148,13 +148,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Person.cpp" />
-    <ClCompile Include="Resource.cpp" />
-    <ClCompile Include="SmartPointer.cpp" />
+    <ClInclude Include="Engine.h" />
+    <ClInclude Include="StringToDigitsEncoder.h" />
+    <ClInclude Include="WordsNode.h" />
+    <ClInclude Include="WordsTree.h" />
+    <ClInclude Include="WordsTreeException.h" />
+    <ClInclude Include="YetAnotherException.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Person.h" />
-    <ClInclude Include="Resource.h" />
+    <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="StringToDigitsEncoder.cpp" />
+    <ClCompile Include="WordsTree.cpp" />
+    <ClCompile Include="WordsTreeException.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
