--- a/StlLibrary/StlLibrary/StlLibrary.vcxproj
+++ b/StlLibrary/StlLibrary/StlLibrary.vcxproj
@@ -152,16 +152,17 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Compare.cpp" />
-    <ClCompile Include="Find.cpp" />
-    <ClCompile Include="Sort.cpp" />
+    <ClCompile Include="Compare3.cpp" />
+    <ClCompile Include="Find1.cpp" />
+    <ClCompile Include="Generating4.cpp" />
+    <ClCompile Include="Sort2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Count.cpp" />
+    <ClCompile Include="Count0.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
