--- a/StlLibrary/StlLibrary/StlLibrary.vcxproj.filters
+++ b/StlLibrary/StlLibrary/StlLibrary.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="Resource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Iteraators5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
