--- a/StlLibrary/StlLibrary/StlLibrary.vcxproj.filters
+++ b/StlLibrary/StlLibrary/StlLibrary.vcxproj.filters
@@ -50,7 +50,10 @@
     <ClCompile Include="Resource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Iteraators5.cpp">
+    <ClCompile Include="Unexpected6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Iterators5.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
