--- a/StlLibrary/StlLibrary/StlLibrary.vcxproj
+++ b/StlLibrary/StlLibrary/StlLibrary.vcxproj
@@ -156,7 +156,7 @@
     <ClCompile Include="Compare3.cpp" />
     <ClCompile Include="Find1.cpp" />
     <ClCompile Include="Generating4.cpp" />
-    <ClCompile Include="Iteraators5.cpp" />
+    <ClCompile Include="Iterators5.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="Sort2.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -166,6 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Count0.cpp" />
+    <ClCompile Include="Unexpected6.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
