--- a/Leetcode/Leetcode.vcxproj.filters
+++ b/Leetcode/Leetcode.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="001.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="002.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
