--- a/Boost/Boost.vcxproj.filters
+++ b/Boost/Boost.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClCompile Include="5_SignalsCustomization.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="6_FileSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="7_Assorted.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
