--- a/Leetcode/Leetcode.vcxproj.filters
+++ b/Leetcode/Leetcode.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="002.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="003.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
