--- a/Leetcode/Leetcode.vcxproj.filters
+++ b/Leetcode/Leetcode.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="003.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="js.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
