--- a/Leetcode/Leetcode.vcxproj
+++ b/Leetcode/Leetcode.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="001.cpp" />
     <ClCompile Include="002.cpp" />
     <ClCompile Include="003.cpp" />
+    <ClCompile Include="js.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
